[project]
name = 'hashime'
readme = 'README.md'
description = 'randomart'
license = { file = 'LICENSE' }
dependencies = []
dynamic = ['version']

# [project.urls]
# Homepage = 'https://github.com/sakhezech/hashime'

# [project.scripts]
# hashime = 'hashime.__main__:cli'

[tool.ruff]
line-length = 79
[tool.ruff.format]
quote-style = 'single'
[tool.ruff.lint]
extend-select = ['I', 'E501']

[tool.hatch.version]
path = 'src/hashime/__version__.py'

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'
